// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App element produces output containing page 1`] = `
<div
  className="ElApp MuiBox-root css-3j596c"
  id="app1"
>
  <div
    className="MuiBox-root css-72fd9l"
  />
  <div
    className="MuiBox-root css-zi2l0h"
  >
    <div
      className="MuiContainer-root MuiContainer-maxWidthLg css-vn2rje-MuiContainer-root"
    >
      <div
        className="css-1k8f9y6-MuiStack-root"
        id="app1.page1"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          id="app1.page1.para1"
        >
          Hello
          where are you
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root css-72fd9l"
  />
</div>
`;

exports[`App element produces output containing page and additional components with app bar at the top 1`] = `
<div
  className="ElApp MuiBox-root css-3j596c"
  id="app1"
>
  <div
    className="MuiBox-root css-72fd9l"
  >
    <header
      className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-hip9hq-MuiPaper-root-MuiAppBar-root"
      id="app1.appBar1"
    >
      <div
        className="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-10ltm04-MuiToolbar-root"
      >
        <button
          aria-label="menu"
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart MuiIconButton-sizeLarge css-ancrnh-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="MenuIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <div
          className="css-y5np4p-MuiStack-root"
        >
          <div
            className="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            The App bar
          </div>
        </div>
      </div>
    </header>
  </div>
  <div
    className="MuiBox-root css-zi2l0h"
  >
    <div
      className="MuiContainer-root MuiContainer-maxWidthLg css-vn2rje-MuiContainer-root"
    >
      <div
        className="css-1k8f9y6-MuiStack-root"
        id="app1.page1"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          id="app1.page1.para1"
        >
          Hello
          where are you
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root css-72fd9l"
  >
    <div>
      <div />
      <code>
        undefined
      </code>
    </div>
    <div>
      <div />
      <code>
        undefined
      </code>
    </div>
  </div>
</div>
`;

exports[`App element produces output with max width 1`] = `
<div
  className="ElApp MuiBox-root css-3j596c"
  id="app1"
>
  <div
    className="MuiBox-root css-72fd9l"
  />
  <div
    className="MuiBox-root css-zi2l0h"
  >
    <div
      className="MuiContainer-root MuiContainer-maxWidthLg css-1lc1axi-MuiContainer-root"
    >
      <div
        className="css-1k8f9y6-MuiStack-root"
        id="app1.page1"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          id="app1.page1.para1"
        >
          Hello
          where are you
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root css-72fd9l"
  />
</div>
`;
